--- a/package.xml
+++ b/package.xml
@@ -10,18 +10,20 @@
   <license>MIT</license>
   <author email="oakyildiz@wpi.edu">Ozan Akyildiz</author>
 
-
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>cv_bridge</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
 
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>cv2</exec_depend>
 
   <depend>sensor_msgs</depend>
+  <!--depend>reflex_msgs</depend-->
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
